--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,21 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.CheckMarket" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/green_primary</item>
-        <item name="colorPrimaryVariant">@color/green_light</item>
-        <item name="colorOnPrimary">@color/white</item>
-    </style>
+  <!-- Base application theme. -->
+  <style name="Theme.CheckMarket" parent="Theme.Material3.DayNight.NoActionBar">
+    <!-- Primary brand color. -->
+    <item name="colorPrimary">@color/primary</item>
+    <item name="colorOnPrimary">@color/on_primary</item>
+
+    <!-- Secondary brand color. -->
+    <item name="colorSecondary">@color/secondary</item>
+    <item name="colorOnSecondary">@color/on_secondary</item>
+
+    <!-- Status bar color. -->
+    <item name="android:statusBarColor">@color/background</item>
+    <item name="android:windowLightStatusBar">true</item>
+
+    <!-- Background color. -->
+    <item name="android:colorBackground">@color/background</item>
+
+    <!-- Customize your theme here. -->
+  </style>
 </resources>
